--- a/Audit_SearchResult.html
+++ b/Audit_SearchResult.html
@@ -36,10 +36,10 @@
     </style>
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_purple01 audit_search_chart" data-page-name="audit_search">
+<div data-role="page" data-quicklinks="true" class="bg_purple01 audit_search_chart" data-page-name="audit_result">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">Audit Search Result</h2>
-		<a href="Audit.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="Audit_Search.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
