--- a/FAI_Odm.html
+++ b/FAI_Odm.html
@@ -39,7 +39,7 @@
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FAI ODM</h2>
 		<a href="User_Center.html" data-transition="none" class="jqm-navmenu-link ui-btn-left myico-user"></a>
-		<a href="FAI_SearchResult-1.html" data-transition="none" class="jqm-search-link ui-btn-right myico-search"></a>
+		<a href="FAI_Search.html" data-transition="none" class="jqm-search-link ui-btn-right myico-search"></a>
     </header>
 	<!-- /header -->
     <div role="main" class="ui-content">
