--- a/FAI_SearchResult-1.html
+++ b/FAI_SearchResult-1.html
@@ -36,10 +36,10 @@
     </style>
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_org js-chart chart_fai_odm"   data-page-name="fai_odm">
+<div data-role="page" data-quicklinks="true" class="bg_org js-chart chart_fai_odm" data-page-name="fai_result_1">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FAI Search Result</h2>
-		<a href="FAI.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="FAI_Search.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
@@ -60,9 +60,9 @@
 		<div class="searchText"><i class="searR myico-arrowT1"></i></div>
 		<div class="Fai_idmCon">
         	<h3 class="Fai_idmTitle">FAI Breakdown</h3>
-            <div id="ui_faiodm_pie" class="ui_fai_pie boxSizing fai_search"></div>           
+            <div id="chart_fai_result_pie" class="ui_fai_pie boxSizing fai_search"></div>           
             <h3 class="Fai_idmTitle">One Month Summary</h3>
-            <div id="ui_faiodm_bar" class="ui_fai_bar"></div>
+            <div id="chart_fai_result_bar" class="ui_fai_bar"></div>
         </div>
 	</div><!-- /content -->
 
