--- a/FAI_SearchResult-3.html
+++ b/FAI_SearchResult-3.html
@@ -36,10 +36,10 @@
     </style>
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_org js-chart">
+<div data-role="page" data-quicklinks="true" class="bg_org js-chart" data-page-name="fai_result_3">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FAI Search Result</h2>
-		<a href="FAI.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="FAI_Search.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
@@ -68,124 +68,121 @@
 				<span>24</span>
 			</div>
 		</div>
-		<div class="Fai_idmCon">
-            <div class="stop_odm">
-				<div class="stopTab">
-					<table cellpadding="0" cellspacing="0" border="0" width="100%">
-						<tr>
-							<td>Lenovo P/N:</td>
-							<td><span>20141010</span></td>
-							<td>Product:</td>
-							<td><span>G40-7D</span></td>
-						</tr>
-						<tr>
-							<td>ODM:</td>
-							<td><span>LCFC_HF_NB</span></td>
-							<td>Country:</td>
-							<td><span>US</span></td>
-						</tr>
-						<tr>
-							<td>GEO:</td>
-							<td><span>EMEA</span></td>
-							<td>FAI Status:</td>
-							<td><span>Pass</span></td>
-						</tr>
-						<tr>
-							<td>Approval Date:</td>
-							<td><span>2014-10-11</span></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="stopTab">
-					<table cellpadding="0" cellspacing="0" border="0" width="100%">
-						<tr>
-							<td>Lenovo P/N:</td>
-							<td><span>20141010</span></td>
-							<td>Product:</td>
-							<td><span>G40-7D</span></td>
-						</tr>
-						<tr>
-							<td>ODM:</td>
-							<td><span>LCFC_HF_NB</span></td>
-							<td>Country:</td>
-							<td><span>US</span></td>
-						</tr>
-						<tr>
-							<td>GEO:</td>
-							<td><span>EMEA</span></td>
-							<td>FAI Status:</td>
-							<td><span>Pass</span></td>
-						</tr>
-						<tr>
-							<td>Approval Date:</td>
-							<td><span>2014-10-11</span></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="stopTab">
-					<table cellpadding="0" cellspacing="0" border="0" width="100%">
-						<tr>
-							<td>Lenovo P/N:</td>
-							<td><span>20141010</span></td>
-							<td>Product:</td>
-							<td><span>G40-7D</span></td>
-						</tr>
-						<tr>
-							<td>ODM:</td>
-							<td><span>LCFC_HF_NB</span></td>
-							<td>Country:</td>
-							<td><span>US</span></td>
-						</tr>
-						<tr>
-							<td>GEO:</td>
-							<td><span>EMEA</span></td>
-							<td>FAI Status:</td>
-							<td><span>Pass</span></td>
-						</tr>
-						<tr>
-							<td>Approval Date:</td>
-							<td><span>2014-10-11</span></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="stopTab tab_none">
-					<table cellpadding="0" cellspacing="0" border="0" width="100%">
-						<tr>
-							<td>Lenovo P/N:</td>
-							<td><span>20141010</span></td>
-							<td>Product:</td>
-							<td><span>G40-7D</span></td>
-						</tr>
-						<tr>
-							<td>ODM:</td>
-							<td><span>LCFC_HF_NB</span></td>
-							<td>Country:</td>
-							<td><span>US</span></td>
-						</tr>
-						<tr>
-							<td>GEO:</td>
-							<td><span>EMEA</span></td>
-							<td>FAI Status:</td>
-							<td><span>Pass</span></td>
-						</tr>
-						<tr>
-							<td>Approval Date:</td>
-							<td><span>2014-10-11</span></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
+    <div class="stop_odm">
+			<div class="stopTab">
+				<table cellpadding="0" cellspacing="0" border="0" width="100%">
+					<tr>
+						<td>Lenovo P/N:</td>
+						<td><span>20141010</span></td>
+						<td>Product:</td>
+						<td><span>G40-7D</span></td>
+					</tr>
+					<tr>
+						<td>ODM:</td>
+						<td><span>LCFC_HF_NB</span></td>
+						<td>Country:</td>
+						<td><span>US</span></td>
+					</tr>
+					<tr>
+						<td>GEO:</td>
+						<td><span>EMEA</span></td>
+						<td>FAI Status:</td>
+						<td><span>Pass</span></td>
+					</tr>
+					<tr>
+						<td>Approval Date:</td>
+						<td><span>2014-10-11</span></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
 			</div>
-        </div>
+			<div class="stopTab">
+				<table cellpadding="0" cellspacing="0" border="0" width="100%">
+					<tr>
+						<td>Lenovo P/N:</td>
+						<td><span>20141010</span></td>
+						<td>Product:</td>
+						<td><span>G40-7D</span></td>
+					</tr>
+					<tr>
+						<td>ODM:</td>
+						<td><span>LCFC_HF_NB</span></td>
+						<td>Country:</td>
+						<td><span>US</span></td>
+					</tr>
+					<tr>
+						<td>GEO:</td>
+						<td><span>EMEA</span></td>
+						<td>FAI Status:</td>
+						<td><span>Pass</span></td>
+					</tr>
+					<tr>
+						<td>Approval Date:</td>
+						<td><span>2014-10-11</span></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+			</div>
+			<div class="stopTab">
+				<table cellpadding="0" cellspacing="0" border="0" width="100%">
+					<tr>
+						<td>Lenovo P/N:</td>
+						<td><span>20141010</span></td>
+						<td>Product:</td>
+						<td><span>G40-7D</span></td>
+					</tr>
+					<tr>
+						<td>ODM:</td>
+						<td><span>LCFC_HF_NB</span></td>
+						<td>Country:</td>
+						<td><span>US</span></td>
+					</tr>
+					<tr>
+						<td>GEO:</td>
+						<td><span>EMEA</span></td>
+						<td>FAI Status:</td>
+						<td><span>Pass</span></td>
+					</tr>
+					<tr>
+						<td>Approval Date:</td>
+						<td><span>2014-10-11</span></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+			</div>
+			<div class="stopTab tab_none">
+				<table cellpadding="0" cellspacing="0" border="0" width="100%">
+					<tr>
+						<td>Lenovo P/N:</td>
+						<td><span>20141010</span></td>
+						<td>Product:</td>
+						<td><span>G40-7D</span></td>
+					</tr>
+					<tr>
+						<td>ODM:</td>
+						<td><span>LCFC_HF_NB</span></td>
+						<td>Country:</td>
+						<td><span>US</span></td>
+					</tr>
+					<tr>
+						<td>GEO:</td>
+						<td><span>EMEA</span></td>
+						<td>FAI Status:</td>
+						<td><span>Pass</span></td>
+					</tr>
+					<tr>
+						<td>Approval Date:</td>
+						<td><span>2014-10-11</span></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+			</div>
+		</div>
 	</div><!-- /content -->
-
 </div><!-- /page -->
 
 <!-- Javascript with AMD 
