--- a/FPY_OOBSearchResult-4.html
+++ b/FPY_OOBSearchResult-4.html
@@ -25,10 +25,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue2 js-chart chart_fpy_oob_s4" data-page-name="fpy_oob_s4">
+<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue2 js-chart" data-page-name="fpyoob_result_4">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FPY/OOB Search Result</h2>
-		<a href="FPY_OOB.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="FPY_Search.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
 	<div role="main" class="ui-content noFooter">
@@ -81,7 +81,7 @@
 			</h3>
 		</div>
 		<div class="Fpy_idmCon">
-			<div id="chart_fpy_Line" style="width:100%;height:320px;"></div>
+			<div id="chart_fpy_line" style="width:100%;height:320px;"></div>
 		</div>
 		<div class="stop_odm">
 			<div class="stopTab">
