--- a/Audit_Search.html
+++ b/Audit_Search.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_purple01 aduit-chart index-page">
+<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_purple01 aduit-chart index-page" data-page-name="audit_search">
 	<header class="headerWrap">
 		<h2 class="lenovoTitle">Search</h2>
 		<a href="Audit.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
@@ -154,7 +154,7 @@
 	        </div>
 	    </div>
 	    <div class="seachBtnWrap">
-	        <a href="Audit_SearchResult.html" data-transition="none" class="form_btn form_btn_search">Search</a>
+	        <a href="javascript:void(0)" data-module="audit" data-transition="none" class="form_btn form_btn_search">Search</a>
 	    </div>
 	</div>
 
