--- a/EC_SearchResult.html
+++ b/EC_SearchResult.html
@@ -28,7 +28,7 @@
 <div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_color_01 js-chart">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">EC Search Result</h2>
-		<a href="EC.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
+		<a href="EC_Search.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
 	<div role="main" class="ui-content noFooter">
