--- a/FPY_OOB_SearchResult.html
+++ b/FPY_OOB_SearchResult.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue2 js-chart" data-page-name="fpyoob_result_1">
+<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue2 js-chart" data-page-name="fpyoob_result">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FPY/OOB Search Result</h2>
 		<a href="FPY_Search.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
@@ -52,7 +52,7 @@
 		</div>
 		<div class="searchText"><i class="searR myico-arrowT1"></i></div>
 		<div class="Fpy_idmCon">
-      <div id="chart_fpy_line" style="width:100%;height:410px;"></div>
+            <div id="chart_fpy_Line" style="width:100%;height:410px;"></div>
 		</div>
 		<div class="stop_odm">
 			<div class="stopTab">
