--- a/FPY_Search.html
+++ b/FPY_Search.html
@@ -25,55 +25,54 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue2 index-page" data-page-name="search_result">
-	<header class="headerWrap">
-		<h2 class="lenovoTitle">Search</h2>
-		<a href="FPY_OOB.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
-	</header>
-	<!-- /header -->		
-	<div role="main" class="ui-content noFooter">
-	    <div class="searchTabTag">
-	        <a href="Qstop_Search.html" data-transition="none" class="tabTag">Q-Stop <i class="tag_down_ico"></i></a>
-	        <a href="FPY_Search.html" data-transition="none" class="tabTag cur">FPY/OOB <i class="tag_down_ico"></i></a>
-	        <a href="Audit_Search.html" data-transition="none" class="tabTag">Audit <i class="tag_down_ico"></i></a>
-	        <a href="FAI_Search.html" data-transition="none" class="tabTag">FAI <i class="tag_down_ico"></i></a>
-	        <a href="EC_Search.html" data-transition="none" class="tabTag">EC <i class="tag_down_ico"></i></a>
-	    </div>
-	    <div class="searchTabCon">
-	        <div class="timeWrap">
+<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue2 index-page" data-page-name="fpyoob_search">
+    <header class="headerWrap">
+        <h2 class="lenovoTitle">Search</h2>
+        <a href="FPY_OOB.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
+    </header>
+    <!-- /header -->        
+    <div role="main" class="ui-content noFooter">
+        <div class="searchTabTag">
+            <a href="Qstop_Search.html" data-transition="none" class="tabTag">Q-Stop <i class="tag_down_ico"></i></a>
+            <a href="FPY_Search.html" data-transition="none" class="tabTag cur">FPY/OOB <i class="tag_down_ico"></i></a>
+            <a href="Audit_Search.html" data-transition="none" class="tabTag">Audit <i class="tag_down_ico"></i></a>
+            <a href="FAI_Search.html" data-transition="none" class="tabTag">FAI <i class="tag_down_ico"></i></a>
+            <a href="EC_Search.html" data-transition="none" class="tabTag">EC <i class="tag_down_ico"></i></a>
+        </div>
+        <div class="searchTabCon">
+            <div class="timeWrap">
                 <div class="timeLine">
                     <span class="timeTitle">Start Time</span>
-	                <input type="date" class="form_date form_txt_style" id="startTime">
+                    <input type="date" class="form_date form_txt_style" id="startTime">
                 </div>
-	            <div class="timeLine">
+                <div class="timeLine">
                     <span class="timeTitle">End Time</span>
-	                <input type="date" class="form_date form_txt_style" id="endTime">
+                    <input type="date" class="form_date form_txt_style" id="endTime">
                 </div>
-	        </div>			
-			<h2 class="selectConTitle">
-	            Phase
-	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
-	        </h2>
-	        <div class="selectConList boxSizing">
+            </div>          
+            <h2 class="selectConTitle">
+                Phase
+                <a href="javascript:void(0)" class="selectedSure sure">OK</a>
+            </h2>
+            <div class="selectConList boxSizing">
                 <div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Phase-1" checked /><label for="Phase-1" class="form_checkbox">Ramp up</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Phase-2" checked /><label for="Phase-2" class="form_checkbox">Mass  Production</label>
-					</span>
-				</div>
-	        </div>			
-	        <h2 class="selectConTitle">
-	            Product
-	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
-	        </h2>
-			<div class="ecSubNavlist ecLine" id="dl_level1">
-				<span class="ecSubTag cur" data-id="all">All</span>
-			</div>
+                    <span class="form_checkbox_wrap">
+                       <input type="checkbox" id="Phase-1" checked /><label for="Phase-1" class="form_checkbox">Ramp up</label>
+                    </span>
+                    <span class="form_checkbox_wrap">
+                       <input type="checkbox" id="Phase-2" checked /><label for="Phase-2" class="form_checkbox">Mass  Production</label>
+                    </span>
+                </div>
+            </div>          
+            <h2 class="selectConTitle">
+                Product
+                <a href="javascript:void(0)" class="selectedSure sure">OK</a>
+            </h2>
+            <div class="ecSubNavlist ecLine" id="dl_level1">
+            </div>
             <div class="product-item">
-			<h3 class="ecSubTit">Family</h3>
-	        <div class="selectConList boxSizing" id="dl_level2">
+            <h3 class="ecSubTit">Family</h3>
+            <div class="selectConList boxSizing" id="dl_level2">
                <!-- <span class="form_checkbox_wrap">
                    <input type="checkbox" id="FamilyAll" /><label for="FamilyAll" class="form_checkbox">All</label>
                 </span>
@@ -92,10 +91,10 @@
                 <span class="form_checkbox_wrap">
                    <input type="checkbox" id="Family-6" /><label for="Family-6" class="form_checkbox">LBEG</label>
                 </span>-->
-	        </div>
-			<div class="ecLine"></div>
-			<h3 class="ecSubTit">Series</h3>
-			<div class="selectConList boxSizing"  id="dl_level3">
+            </div>
+            <div class="ecLine"></div>
+            <h3 class="ecSubTit">Series</h3>
+            <div class="selectConList boxSizing"  id="dl_level3">
                <!-- <span class="form_checkbox_wrap">
                    <input type="checkbox" id="SeriesAll" checked /><label for="SeriesAll" class="form_checkbox">All</label>
                 </span>
@@ -120,10 +119,10 @@
                 <span class="form_checkbox_wrap">
                    <input type="checkbox" id="Series-8" checked /><label for="Series-8" class="form_checkbox">Y Series</label>
                 </span>-->
-	        </div>
-			<div class="ecLine"></div>
-			<h3 class="ecSubTit">Product</h3>
-			<div class="selectConList boxSizing"  id="dl_level4">
+            </div>
+            <div class="ecLine"></div>
+            <h3 class="ecSubTit">Product</h3>
+            <div class="selectConList boxSizing"  id="dl_level4">
                <!-- <span class="form_checkbox_wrap">
                    <input type="checkbox" id="ProductAll" /><label for="ProductAll" class="form_checkbox">All</label>
                 </span>
@@ -148,15 +147,16 @@
                 <span class="form_checkbox_wrap">
                    <input type="checkbox" id="Product-8" checked /><label for="Product-8" class="form_checkbox">H530s</label>
                 </span>-->
-	        </div>	
+            </div>  
             </div>
-			<h2 class="selectConTitle">
-	            ODM
-	            <a href="javascript:void(0)" class="selectedSure">OK</a>
-	        </h2>
-	        <div class="selectConList boxSizing">
+            <h2 class="selectConTitle">
+                ODM
+                <a href="javascript:void(0)" class="selectedSure">OK</a>
+                <input type="hidden" id="Odm-SelectedItem" />
+            </h2>
+            <div class="selectConList boxSizing">
                 <span class="form_checkbox_wrap">
-                   <input type="checkbox" id="OdmAll" /><label for="OdmAll" class="form_checkbox">All</label>
+                   <input type="checkbox" id="Odm-All" /><label for="Odm-All" class="form_checkbox">All</label>
                 </span>
                 <span class="form_checkbox_wrap">
                    <input type="checkbox" id="Odm-2" checked /><label for="Odm-2" class="form_checkbox">T&I_SH _DT</label>
@@ -191,12 +191,12 @@
                 <span class="form_checkbox_wrap">
                    <input type="checkbox" id="Odm-12" /><label for="Odm-12" class="form_checkbox">Wistron _KS_NB</label>
                 </span>
-	        </div>
-	    </div>
-	    <div class="seachBtnWrap">
-	        <a href="FPY_OOBSearchResult-1.html" data-transition="none" class="form_btn form_btn_search">Search</a>
-	    </div>
-	</div>
+            </div>
+        </div>
+        <div class="seachBtnWrap">
+            <a href="javascript:void(0)" data-module="fpyoob" data-transition="none" class="form_btn form_btn_search">Search</a>
+        </div>
+    </div>
 
 </div><!-- /page -->
 
