--- a/index.html
+++ b/index.html
@@ -42,36 +42,70 @@
     <header class="headerWrap">
 		<h2 class="lenovoTitle qstop chartsTab"><span class="chartsTab_l cur">SNAP SHOT</span><span class="chartsTab_r">CHARTS</span></h2>
 		<a href="User_Center.html" data-transition="none" class="jqm-navmenu-link ui-btn-left myico-user"></a>
-		<a href="Qstop_SearchResult.html" class="jqm-search-link ui-btn-right myico-search"></a>
+		<a href="Qstop_Search.html" class="jqm-search-link ui-btn-right myico-search"></a>
     </header>
 	<!-- /header -->
     <div role="main" class="ui-content">
        <div class="chartsBox">
            <div class="chartsCon">
-            <div id="mapSide">
-                <div class="mapSideBot height_firstp swiper-container">
-                    <ul class="mslist swiper-wrapper">
-    <!--
-                        <li class="msEachlist swiper-slide">
-                            <div class="mapDataDetail">
-                                <h2 class="mdh2">
-                                    <span class="mdh2_1">ODM Name:</span>
-                                    <span class="mdh2_2">SHP_SH_DTA</span>
-                                </h2>
-                                <ul class="mdhlist">
-                                    <li class="mdhli">
-                                        <span class="mli_l">Tgt</span>
-                                        <span class="mli_r">2.1M</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-    -->
-                    </ul>
+                <div id="mapSide">
+                    <div class="mapSideBot height_firstp swiper-container">
+                        <ul class="mslist swiper-wrapper">
+        <!--
+                            <li class="msEachlist swiper-slide">
+                                <div class="mapDataDetail">
+                                    <h2 class="mdh2">
+                                        <span class="mdh2_1">ODM Name:</span>
+                                        <span class="mdh2_2">SHP_SH_DTA</span>
+                                    </h2>
+                                    <ul class="mdhlist">
+                                        <li class="mdhli">
+                                            <span class="mli_l">Tgt</span>
+                                            <span class="mli_r">2.1M</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+        -->
+                        </ul>
+                    </div>
                 </div>
-            </div>
-
-            <div id="mapWrap" style="width:100%;height:65%; clear:both;"></div>
+                <div id="mapWrap" style="width:100%;height:65%; clear:both;"></div>
+                <!--map_dialog-->
+                <div class="map_tips boxSizing map_tips_red show">
+                    <h2 class="mtt">SHP_SH_DTA <span></span></h2>
+                    <div class="map_tipsBox">
+                        <div class="mtc">
+                            <span>03</span>
+                            <p>DAY</p>
+                    <!--        <p>8Hours</p>-->
+                        </div>
+                        <div class="maptiptable">
+                            <div class="row">
+                                <div class="cell">Stop:</div>
+                                <div class="cell">03-24 18:05:30</div>
+                            </div>
+                            <div class="row">
+                                <div class="cell">Recovery:</div>
+                                <div class="cell">03-24 18:05:30</div>
+                            </div>
+                        </div>
+                        <div class="maptiptable2">
+                            <div class="row">
+                                <div class="cell">-FGs:1</div>
+                                <div class="cell">-WIP:4</div>
+                                <div class="cell">-ONS:6</div>
+                                <div class="cell">-Category:design</div>
+                            </div>
+                        </div>
+                        <div class="mtb">
+                            <h3>STOP WIRE PRODUCTS STOP WIRE PRODUCTS</h3>
+                            <p>H520s Enginneering related yuanjqH520s</p>
+                            <p>related Enginneering related</p>
+                        </div>
+                    </div>
+                </div>
+                <!--map_dialog-->
             </div>
             <div class="chartsCon t-box chartHide"  >
                 <div id="chart_home_bar" class="t-box" style="margin-bottom:10px;"></div>
@@ -79,7 +113,6 @@
        </div>
     </div>
     <!-- /content -->
-
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
@@ -106,7 +139,6 @@
 		</div>
 	</div><!-- /footer -->
 </div><!-- /page -->
-
 <!-- Javascript with AMD 
 ================================================== -->
 <script src="js/require.js" data-main="js/main" ></script>
